--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -49,3 +49,35 @@ body {
   /* width: 5px; */
   border-radius: 5rem;
 }
+
+
+@media (max-width: 768px) {
+  .sidebar {
+    position: fixed !important;
+    top: 0 !important;
+    bottom: 0 !important;
+    left: 0 !important;
+    transform: translateX(0) !important;
+    inset-block: calc(var(--spacing) * 0) !important;
+  }
+
+  .inActive {
+    transform: translateX(-100%) !important;
+
+  }
+}
+
+/* @keyframes slideRight {
+  0% {
+    transform: translateX(-100%);
+  }
+  100% {
+    transform: translateX(100%);
+  }
+}
+
+.slide-text {
+  display: inline-block;
+  white-space: nowrap;
+  animation: slideRight 5s linear infinite;
+} */
